--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
 body {
     background-color: #363537;
     color: white;
+    padding: 0.25em;
 }
 
 a {
@@ -13,4 +14,5 @@ a {
     font-weight: bolder;
     font-family: "JetBrains Mono", monospace;
     font-optical-sizing: auto;
+    padding-left: 0.5em;
 }
